# similar-names

./: README.md  similar-names.cabal
src/Data/: SimilarNames.hs
test/: SimilarNamesSpec.hs
